--- a/src/app/_content/Card.css
+++ b/src/app/_content/Card.css
@@ -1,4 +1,6 @@
 .tag {
+  display: flex;
+  justify-content:space-between;
   padding: 16px;
   color: white;
   font-size: 1.8rem;
@@ -10,5 +12,10 @@
   align-items: center;
   height: 6rem;
   padding: 16px;
-  font-size: 1.8rem;
+  font-size: 1.5rem;
+}
+
+.card {
+  /* 横幅を親要素ぴったりになるように */
+  width: 100%;
 }
