--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,27 @@
 * {
   margin: 0;
 }
+
+.title {
+  position: fixed;
+  text-align: center;
+
+  background-color: #7ce2fe;
+
+  width: 100%;
+  padding: 10px 0 8px 0;
+  margin-bottom: 10px;
+
+  text-decoration: none;
+  color: black;
+}
+
+.cardContainer {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
+  margin: auto;
+  padding-top: 5rem;
+  padding-bottom: 0.5rem;
+  max-width: 95vw;
+  gap: 10px;
+}
