--- a/src/app/page.css
+++ b/src/app/page.css
@@ -2,9 +2,10 @@
   margin: 0;
 }
 
-.cardContainer {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  margin: 50px;
-  gap: 10px;
+.reGenerate {
+  border: none;
+  background-color: gray;
+  color: white;
+  font-size: 1.5rem;
+  padding: 8px 0;
 }
